# size-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
size_check/: __init__.py  main.py
